--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -8,6 +8,9 @@
 	&--black{
 		color: black !important;
 	}
+	&-base{
+		color: #333 !important;
+	}
 }
 
 
@@ -44,34 +47,11 @@
 
 
 
-// Image position control
-.c-pull{
-	&--left{
-		margin-left: calc(((100vw - 100%) / 2) * -1)
-	}
-	&--right{
-		margin-right: calc(((100vw - 100%) / 2) * -1)
-	}
-}
 
 
 
 
 
-
-
-
-
-
-/* ====================================================
-Component
-==================================================== */
-// Common Text style
-.c-txt{
-	&__basic{
-
-	}
-}
 
 
 
@@ -113,7 +93,117 @@ Component
 			}
 		}
 	}
-
+	&__02{
+		display: block;
+		text-align: center;
+		position: relative;
+		color: #AE8770;
+		letter-spacing: 6.8px;
+		@include font-size(18);
+		font-weight: bold;
+		line-height: 1.4;
+		padding: 20px 0;
+		margin-bottom: 50px;
+		@include mq(){
+			@include font-size(14);
+			letter-spacing: 4px;
+		}
+		&:after{
+			content: "";
+			width: 70px;
+			height: 2px;
+			background: #AE8770;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+		}
+	}
+	&__03{
+		display: block;
+		text-align: center;
+		line-height: 1.4;
+		margin-bottom: 30px;
+		span,small{
+			display: block;
+		}
+		span{
+			color: #104052;
+			letter-spacing: -4.5px;
+			@include font-size(46);
+			font-family: $font-notoSerif;
+			font-weight: 600;
+			margin-bottom: 5px;
+			@include mq(){
+				letter-spacing: -3px;
+				font-size: 25px;
+			}
+		}
+		small{
+			font-family: $font-notoSan;
+			color: #008778;
+			@include font-size(30);
+			@include mq(){
+				@include font-size(20);
+			}
+		}
+	}
+	&__04{
+		display: block;
+		position: relative;
+		@include font-size(26);
+		line-height: 1.4;
+		padding: 0 0 0 30px;
+		margin-bottom: 20px;
+		@include mq(){
+			@include font-size(20);
+			padding: 0 0 0 20px;
+		}
+		&:before{
+			content: "\f35a";
+			font-weight: bold;
+			font-family: "Font Awesome 6 Free";
+			color: #AE8770;
+			position: absolute;
+			top: 4px;
+			left: 0;
+			@include font-size(16);
+			@include mq(){
+				@include font-size(14);
+			}
+		}
+	}
+	&__05{
+		display: block;
+		text-align: center;
+		color: #dddddd;
+		@include font-size(16);
+		margin-bottom: 30px;
+		@include mq(){
+			@include font-size(14);
+		}
+		span{
+			display: block;
+			letter-spacing: 10px;
+			margin-bottom: 10px;
+			@include mq(){
+				letter-spacing: 6px;
+			}
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+		svg{
+			display: block;
+			width: 35px;
+			margin: 0 auto;
+			fill: #E0E0E0;
+			@include mq(){
+				width: 30px;
+			}
+		}
+	}
 }
 
 //btn
