--- a/scss/_module.scss
+++ b/scss/_module.scss
@@ -17,11 +17,11 @@
 	display: block;
 	width: 100%;
 	height: 45px;
+	border-radius: 4px;
 	background: white;
-	border: 1px solid #ccc;
+	border: 1px solid #777;
 	font-weight: 500;
 	padding: 5px 10px;
-	@include font-size(15);
 	&:focus{
 		border-color: #66afe9;
 		outline: 0;
@@ -53,50 +53,14 @@ textarea.form-control{
 
 
 
-//HTML CSS radio end check box
-
-//<ul class="pure-list">
-//	<li>
-//		<div class="pure-list__input">
-//			<input name="radio" type="radio" class="radio" checked="checked">
-//			<span>Option 1</span>
-//		</div>
-//	</li>
-//
-//	<li>
-//		<div class="pure-list__input">
-//			<input name="radio" type="radio" class="radio">
-//			<span>Option 1</span>
-//		</div>
-//	</li>
-//
-//	<li>
-//		<div class="pure-list__input">
-//			<input name="checkbox" type="checkbox" checked="checked">
-//			<span>Choice A</span>
-//		</div>
-//	</li>
-//
-//	<li>
-//		<div class="pure-list__input">
-//			<input name="checkbox" type="checkbox">
-//			<span>Choice B</span>
-//		</div>
-//	</li>
-//</ul>
 
 //radio end check box
 .pure-list{
 	@include flex(0,0,wrap);
-	margin-bottom: 35px;
-	@include mq(){
-		margin-bottom: 28px;
-	}
 	li{
 		margin-right: 39px;
 		@include mq(){
-			width: 100%;
-			margin: 0 0 2px;
+			margin: 0 30px 0 0;
 		}
 		&:last-child{
 			margin-right: 0;
@@ -117,14 +81,14 @@ textarea.form-control{
 				& + span{
 					&:after{
 						background-color: transparent;
-						top: 50%;
 						left: 4px;
+						top: 7px;
 						width: 8px;
 						height: 3px;
-						margin-top: -4px;
 						border-style: solid;
 						border-color: #ffffff;
 						border-width: 0 0 3px 3px;
+						-o-border-image: none;
 						border-image: none;
 						transform: rotate(-45deg) scale(0);
 					}
@@ -138,7 +102,7 @@ textarea.form-control{
 						}
 						&:before{
 							animation: borderscale 200ms ease-in;
-							background: #4F8196;
+							background: #4242cd;
 						}
 					}
 				}
@@ -164,26 +128,31 @@ textarea.form-control{
 		span{
 			display: block;
 			position: relative;
-			padding: 10px 0 10px 40px;
+			padding: 0 0 0 30px;
 			vertical-align: middle;
 			user-select: none;
 			cursor: pointer;
 			&:before{
 				content: "";
 				position: absolute;
-				top: 12px;
+				top: 0;
 				left: 0;
-				width: 24px;
-				height: 24px;
-				background: #EDEDED;
-				border: 1px solid #718CC7;
+				width: 20px;
+				height: 20px;
+				background: white;
+				border: 1px solid #777;
 				text-align: center;
 				transition: all 0.3s ease;
 				border-radius: 3px;
+				@include mq(){
+					top: 2px;
+					width: 16px;
+					height: 16px;
+				}
 			}
 			&:after{
 				content: "";
-				background-color: #718CC7;
+				background-color: #4242cd;
 				position: absolute;
 				top: 18px;
 				left: 6px;
