--- a/css/styles.css
+++ b/css/styles.css
@@ -2048,6 +2048,7 @@ textarea.form-control {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  z-index: 10;
 }
 .block-note li {
   width: 50%;
